added first style/layout

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>To Do List - Application</title>
 </head>
 <body class="page">
+
+    <div class="todo">
+        <header class="todo__header">
+            <h1 class="todo__title">To Do App</h1>
+        </header>
+        <div class="todo__body">
+            
+        </div>
+
+    </div>
     
     <script src="js/main.js"></script>
 </body>
