added task style

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
             <h1 class="todo__title">To Do App</h1>
         </header>
         <div class="todo__body">
+            <form action="#" class="todo__tasks">
+                <label class="task">
+                    <input type="text" class="task__input" placeholder="Add task">
+                    <button class="task__button"></button>
+                </label>
+                <label class="task">
+                    <button class="task__button"></button>
+                    <input type="text" class="task__input" placeholder="Add task">
+                    <button class="task__button"></button>
+                </label>
+
+            </form>
             
         </div>
 
