complete task func

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="task js-task">
                     <label>
-                        <input class="task__check" type="checkbox" name="task-check">
+                        <input class="task__check js-complete-button" type="checkbox" name="task-check">
                         <span class="task__check-fake task__button"></span>
                     </label>
                     <input type="text" class="task__input" readonly>
