rigth task loop for load from local storage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <input type="text" class="task__input js-task-name" placeholder="Add task">
                     <button class="task__button js-task-button"></button>
                 </div>
-                <div class="task js-task">
+                <div class="task task--hidden js-task">
                     <label>
                         <input class="task__check js-complete-button" type="checkbox" name="task-check">
                         <span class="task__check-fake task__button"></span>
