added progress bar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <button class="task__button task__button--closing js-close-button"></button>
                 </div>
 
+                
             </form>
+            <progress class="todo__progress js-progress" max="10" value="1">
             
         </div>
 
