added functionality for progress bar with some bugs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 
             </form>
-            <progress class="todo__progress js-progress" max="10" value="1">
+            <progress class="todo__progress js-progress">
             
         </div>
 
