added settings layout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="todo">
         <header class="todo__header">
             <h1 class="todo__title">To Do App</h1>
+            <button class="settings-toggle js-settings-toggle" aria-label="settings"></button>
+            <div class="todo__settings settings js-settings"></div>
         </header>
         <div class="todo__body">
             <form action="#" class="todo__tasks js-task-list">
