--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 
     </div>
     
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
