--- a/index.html
+++ b/index.html
@@ -20,7 +20,30 @@
         <header class="todo__header">
             <h1 class="todo__title">To Do App</h1>
             <button class="settings-toggle js-settings-toggle" aria-label="settings"></button>
-            <div class="todo__settings settings js-settings"></div>
+            <div class="todo__settings settings js-settings">
+                <form action="" class="settings__form">
+                    <label class="settings__label">
+                        <input type="checkbox" name="settings" class="settings__check">
+                        <span class="settings__check-fake"></span>
+                        <span class="settings__title">Option 1</span>
+                    </label>
+                    <label class="settings__label">
+                        <input type="checkbox" name="settings" class="settings__check">
+                        <span class="settings__check-fake"></span>
+                        <span class="settings__title">Option 2</span>
+                    </label>
+                    <label class="settings__label">
+                        <input type="checkbox" name="settings" class="settings__check">
+                        <span class="settings__check-fake"></span>
+                        <span class="settings__title">Option 3</span>
+                    </label>
+                    <label class="settings__label">
+                        <input type="checkbox" name="settings" class="settings__check">
+                        <span class="settings__check-fake"></span>
+                        <span class="settings__title">Option 4</span>
+                    </label>
+                </form>
+            </div>
         </header>
         <div class="todo__body">
             <form action="#" class="todo__tasks js-task-list">
