settings true hiding, added additional styles

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             <div class="todo__settings settings js-settings">
                 <form action="" class="settings__form">
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check">
+                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
                         <span class="settings__title">Option 1</span>
                     </label>
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check">
+                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
                         <span class="settings__title">Option 2</span>
                     </label>
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check">
+                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
                         <span class="settings__title">Option 3</span>
                     </label>
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check">
+                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
                         <span class="settings__title">Option 4</span>
                     </label>
