--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
             <div class="todo__settings settings js-settings">
                 <form action="" class="settings__form">
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
+                        <input type="checkbox" name="option-progress-bar" class="settings__check js-settings-option" checked>
                         <span class="settings__check-fake"></span>
-                        <span class="settings__title">Option 1</span>
+                        <span class="settings__title">Progress bar</span>
                     </label>
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
+                        <input type="checkbox" name="option-date" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
-                        <span class="settings__title">Option 2</span>
+                        <span class="settings__title">Tasks dates</span>
                     </label>
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
+                        <input type="checkbox" name="option-count" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
-                        <span class="settings__title">Option 3</span>
+                        <span class="settings__title">Tasks count</span>
                     </label>
                     <label class="settings__label">
-                        <input type="checkbox" name="settings" class="settings__check js-settings-option">
+                        <input type="checkbox" name="option-price" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
-                        <span class="settings__title">Option 4</span>
+                        <span class="settings__title">Tasks prices</span>
                     </label>
                 </form>
             </div>
