separate close task func

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <input class="task__check js-complete-button" type="checkbox" name="task-check">
                         <span class="task__check-fake task__button"></span>
                     </label>
-                    <input type="text" class="task__input" readonly>
+                    <input type="text" class="task__input" name="task-title" readonly>
                     <input type="text" class="task__input task__input--price js-price" readonly>
                     <button class="task__button task__button--closing js-close-button" aria-label="close task"></button>
                 </div>
