--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="icon" sizes="192x192" href="image/icon-192.png">
     <link rel="icon" sizes="32x32" href="image/icon-32.png">
+    <link rel="manifest" href="manifest.json">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
