--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <header class="todo__header">
             <h1 class="todo__title">To Do App</h1>
-            <button class="settings-toggle js-settings-toggle" aria-label="settings"></button>
+            <button class="settings-button settings-toggle js-settings-toggle" aria-label="settings"></button>
+            <button class="settings-button settings-clear js-settings-clear" aria-label="clear all"></button>
             <div class="todo__settings settings js-settings">
                 <form action="#" class="settings__form">
                     <label class="settings__label">
