added modal window and style for this

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 
     <div class="todo">
 
+        <div class="todo__modal modal">
+            <h2 class="modal__title">Are you sure?</h2>
+            <p class="modal__text">
+                This action will delete all your tasks and cannot be canceled later
+            </p>
+            <button class="modal__button">No</button>
+            <button class="modal__button">Yes</button>
+        </div>
+
         <header class="todo__header">
             <h1 class="todo__title">To Do App</h1>
             <button class="settings-button settings-toggle js-settings-toggle" aria-label="settings">
