added modal functionality and fade in/fade out animation

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <div class="todo">
 
-        <div class="todo__modal modal">
+        <div class="todo__modal modal js-modal">
             <h2 class="modal__title">Are you sure?</h2>
             <p class="modal__text">
                 This action will delete all your tasks and cannot be canceled later
             </p>
-            <button class="modal__button">No</button>
-            <button class="modal__button">Yes</button>
+            <button class="modal__button js-modal-ok">OK</button>
+            <button class="modal__button js-modal-cancel">Cancel</button>
         </div>
 
         <header class="todo__header">
