added new load settings func

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                         <span class="settings__check-fake"></span>
                         <span class="settings__title">Tasks dates</span>
                     </label>
-                    <label class="settings__label">
+                    <!-- <label class="settings__label">
                         <input type="checkbox" name="option-count" class="settings__check js-settings-option" disabled>
                         <span class="settings__check-fake"></span>
                         <span class="settings__title">Tasks count</span>
-                    </label>
+                    </label> -->
                     <label class="settings__label">
                         <input type="checkbox" name="option-price" class="settings__check js-settings-option">
                         <span class="settings__check-fake"></span>
