fix settings load. Added open graph

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="icon" sizes="32x32" href="image/icon-32.png">
     <link rel="manifest" href="manifest.json">
 
+    <meta name="og:title" content="To-Do App">
+    <meta name="og:description" content="Simple to-do list application">
+    <meta name="og:url" content="https://kadonomaro.github.io/todo-app/">
+    <meta name="og:image" content="image/icon-512.png">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>To Do List - Application</title>
