added styles/func-ty for about block

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             
         </div>
 
-        <div class="todo__about about">
+        <div class="todo__about about js-about">
             <span class="about__text">
                 Designed by <a href="https://github.com/kadonomaro/Main" class="about__link" target="_blank" rel="noopener noreferrer">Kadonomaro</a>
             </span>
