return event to click, added clear storage on DOM loaded for ios

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="og:description" content="Simple to-do list application">
     <meta name="og:url" content="https://kadonomaro.github.io/todo-app/">
     <meta name="og:image" content="image/icon-512.png">
+    <meta property="og:type" content="article" />
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
